--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 beautifulsoup4==4.12.2
-google_api_python_client==2.97.0
-httplib2==0.22.0
-oauth2client==4.1.3
 praw==7.7.1
+python-dotenv==1.0.0
 Requests==2.31.0
